--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply m-0;
+    @apply p-0;
+    @apply overflow-x-hidden;
+    @apply w-full;
+    @apply h-full;
+  }
+}
